--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -64,248 +64,248 @@
 
     <releases>
         <release version="56" date="2023-6-11">
-            <description>
-                <p translatable="no">Language chooser in document wizard, ...</p>
+            <description translatable="no">
+                <p>Language chooser in document wizard, ...</p>
             </description>
         </release>
         <release version="55" date="2023-4-8">
-            <description>
-                <p translatable="no">Better dark / light mode support, ...</p>
+            <description translatable="no">
+                <p>Better dark / light mode support, ...</p>
             </description>
         </release>
         <release version="54" date="2023-3-10">
-            <description>
-                <p translatable="no">Tectonic support, parser improvements, todo items in the sidebar, show link targets in .pdf-preview, change version numbering ...</p>
+            <description translatable="no">
+                <p>Tectonic support, parser improvements, todo items in the sidebar, show link targets in .pdf-preview, change version numbering ...</p>
             </description>
         </release>
         <release version="0.4.8" date="2022-7-28">
-            <description>
-                <p translatable="no">Bug fix</p>
+            <description translatable="no">
+                <p>Bug fix</p>
             </description>
         </release>
         <release version="0.4.7" date="2022-3-25">
-            <description>
-                <p translatable="no">Jump over some brackets with tab, ...</p>
+            <description translatable="no">
+                <p>Jump over some brackets with tab, ...</p>
             </description>
         </release>
         <release version="0.4.6" date="2022-3-8">
-            <description>
-                <p translatable="no">Document stats in the sidebar, ...</p>
+            <description translatable="no">
+                <p>Document stats in the sidebar, ...</p>
             </description>
         </release>
         <release version="0.4.5" date="2022-2-24">
-            <description>
-                <p translatable="no">Document structure widget in the sidebar, ...</p>
+            <description translatable="no">
+                <p>Document structure widget in the sidebar, ...</p>
             </description>
         </release>
         <release version="0.4.4" date="2022-2-16">
-            <description>
-                <p translatable="no">Redesigned symbols sidebar with search and recent symbols, ...</p>
+            <description translatable="no">
+                <p>Redesigned symbols sidebar with search and recent symbols, ...</p>
             </description>
         </release>
         <release version="0.4.3" date="2022-2-10">
-            <description>
-                <p translatable="no">Forward synctex from included files, code folding hover effect, ...</p>
+            <description translatable="no">
+                <p>Forward synctex from included files, code folding hover effect, ...</p>
             </description>
         </release>
         <release version="0.4.2" date="2021-11-21">
-            <description>
-                <p translatable="no">Performance improvements, persistent zoom in preview, ...</p>
+            <description translatable="no">
+                <p>Performance improvements, persistent zoom in preview, ...</p>
             </description>
         </release>
         <release version="0.4.1" date="2021-1-19">
-            <description>
-                <p translatable="no">Bug fix</p>
+            <description translatable="no">
+                <p>Bug fix</p>
             </description>
         </release>
         <release version="0.4.0" date="2021-1-16">
-            <description>
-                <p translatable="no">Performance improvements, ...</p>
+            <description translatable="no">
+                <p>Performance improvements, ...</p>
             </description>
         </release>
         <release version="0.3.9" date="2021-1-2">
-            <description>
-                <p translatable="no">Support for links in .pdf preview, new welcome screen, ...</p>
+            <description translatable="no">
+                <p>Support for links in .pdf preview, new welcome screen, ...</p>
             </description>
         </release>
         <release version="0.3.8" date="2020-12-12">
-            <description>
-                <p translatable="no">Build button now does save and build, performance improvements, ...</p>
+            <description translatable="no">
+                <p>Build button now does save and build, performance improvements, ...</p>
             </description>
         </release>
         <release version="0.3.7" date="2020-11-28">
-            <description>
-                <p translatable="no">Performance improvements, ...</p>
+            <description translatable="no">
+                <p>Performance improvements, ...</p>
             </description>
         </release>
         <release version="0.3.6" date="2020-11-8">
-            <description>
-                <p translatable="no">Save and build on F5, build in the directory of the LaTeX document being built, .cls and .sty file editing, ...</p>
+            <description translatable="no">
+                <p>Save and build on F5, build in the directory of the LaTeX document being built, .cls and .sty file editing, ...</p>
             </description>
         </release>
         <release version="0.3.5" date="2020-10-28">
-            <description>
-                <p translatable="no">Zoom in editor view, show warning when document was deleted on disk, ...</p>
+            <description translatable="no">
+                <p>Zoom in editor view, show warning when document was deleted on disk, ...</p>
             </description>
         </release>
         <release version="0.3.4" date="2020-10-15">
-            <description>
-                <p translatable="no">Set editor font, context menu in shortcuts bar, ...</p>
+            <description translatable="no">
+                <p>Set editor font, context menu in shortcuts bar, ...</p>
             </description>
         </release>
         <release version="0.3.3" date="2020-10-6">
-            <description>
-                <p translatable="no">Add syntax themes from files, edit begin and end commands simultaneously, autocomplete improvements, ...</p>
+            <description translatable="no">
+                <p>Add syntax themes from files, edit begin and end commands simultaneously, autocomplete improvements, ...</p>
             </description>
         </release>
         <release version="0.3.2" date="2020-9-9">
-            <description>
-                <p translatable="no">New syntax highlighting theme, full line indentation, ...</p>
+            <description translatable="no">
+                <p>New syntax highlighting theme, full line indentation, ...</p>
             </description>
         </release>
         <release version="0.3.1" date="2020-9-1">
-            <description>
-                <p translatable="no">Tab autocomplete, dynamic citations autocomplete, more autocomplete improvements, ...</p>
+            <description translatable="no">
+                <p>Tab autocomplete, dynamic citations autocomplete, more autocomplete improvements, ...</p>
             </description>
         </release>
         <release version="0.3.0" date="2020-8-20">
-            <description>
-                <p translatable="no">Biber support, Glossaries support, ...</p>
+            <description translatable="no">
+                <p>Biber support, Glossaries support, ...</p>
             </description>
         </release>
         <release version="0.2.9" date="2020-8-12">
-            <description>
-                <p translatable="no">Use Latexmk with any LaTeX interpreter, invert colors in .pdf preview, ...</p>
+            <description translatable="no">
+                <p>Use Latexmk with any LaTeX interpreter, invert colors in .pdf preview, ...</p>
             </description>
         </release>
         <release version="0.2.8" date="2020-5-27">
-            <description>
-                <p translatable="no">Redesigned help panel homepage, LaTeX package documentation links, ...</p>
+            <description translatable="no">
+                <p>Redesigned help panel homepage, LaTeX package documentation links, ...</p>
             </description>
         </release>
         <release version="0.2.7" date="2020-5-24">
-            <description>
-                <p translatable="no">Italian translation, help panel with LaTeX documentation, open files from the file manager and command line, ...</p>
+            <description translatable="no">
+                <p>Italian translation, help panel with LaTeX documentation, open files from the file manager and command line, ...</p>
             </description>
         </release>
         <release version="0.2.6" date="2020-5-11">
-            <description>
-                <p translatable="no">German translation, external .pdf viewer button, ...</p>
+            <description translatable="no">
+                <p>German translation, external .pdf viewer button, ...</p>
             </description>
         </release>
         <release version="0.2.5" date="2020-4-28">
-            <description>
-                <p translatable="no">Bug fix</p>
+            <description translatable="no">
+                <p>Bug fix</p>
             </description>
         </release>
         <release version="0.2.4" date="2020-4-27">
-            <description>
-                <p translatable="no">Initial backward synctex support, improved synctex highlighting, search UI improvements, ...</p>
+            <description translatable="no">
+                <p>Initial backward synctex support, improved synctex highlighting, search UI improvements, ...</p>
             </description>
         </release>
         <release version="0.2.3" date="2020-4-11">
-            <description>
-                <p translatable="no">Session management, highlight passages on build, ...</p>
+            <description translatable="no">
+                <p>Session management, highlight passages on build, ...</p>
             </description>
         </release>
         <release version="0.2.2" date="2020-4-2">
-            <description>
-                <p translatable="no">Zoom level popover for the .pdf preview, preview should use far less memory now, ...</p>
+            <description translatable="no">
+                <p>Zoom level popover for the .pdf preview, preview should use far less memory now, ...</p>
             </description>
         </release>
         <release version="0.2.1" date="2020-3-19">
-            <description>
-                <p translatable="no">Bug fixes</p>
+            <description translatable="no">
+                <p>Bug fixes</p>
             </description>
         </release>
         <release version="0.2.0" date="2020-3-18">
-            <description>
-                <p translatable="no">Enable embedded system commands, document modified on disk dialog, option to highlight current line, option to highlight matching brackets, ...</p>
+            <description translatable="no">
+                <p>Enable embedded system commands, document modified on disk dialog, option to highlight current line, option to highlight matching brackets, ...</p>
             </description>
         </release>
         <release version="0.1.9" date="2020-2-18">
-            <description>
-                <p translatable="no">Add/remove packages dialog, improved HiDPI support, ...</p>
+            <description translatable="no">
+                <p>Add/remove packages dialog, improved HiDPI support, ...</p>
             </description>
         </release>
         <release version="0.1.8" date="2020-1-25">
-            <description>
-                <p translatable="no">Keyboard shortcuts in popovers, more commands in shortcuts bar, ...</p>
+            <description translatable="no">
+                <p>Keyboard shortcuts in popovers, more commands in shortcuts bar, ...</p>
             </description>
         </release>
         <release version="0.1.7" date="2020-1-18">
-            <description>
-                <p translatable="no">More commands in shortcuts bar, autocomplete now case insensitive, ...</p>
+            <description translatable="no">
+                <p>More commands in shortcuts bar, autocomplete now case insensitive, ...</p>
             </description>
         </release>
         <release version="0.1.6" date="2020-1-13">
-            <description>
-                <p translatable="no">HiDPI support in .pdf preview, presistent code folding, ...</p>
+            <description translatable="no">
+                <p>HiDPI support in .pdf preview, presistent code folding, ...</p>
             </description>
         </release>
         <release version="0.1.5" date="2020-1-3">
-            <description>
-                <p translatable="no">Initial code folding support, ...</p>
+            <description translatable="no">
+                <p>Initial code folding support, ...</p>
             </description>
         </release>
         <release version="0.1.4" date="2019-12-28">
-            <description>
-                <p translatable="no">References to existing labels in autocomplete, persistent root document state, ...</p>
+            <description translatable="no">
+                <p>References to existing labels in autocomplete, persistent root document state, ...</p>
             </description>
         </release>
         <release version="0.1.3" date="2019-12-21">
-            <description>
-                <p translatable="no">Initial spellchecking support, ...</p>
+            <description translatable="no">
+                <p>Initial spellchecking support, ...</p>
             </description>
         </release>
         <release version="0.1.2" date="2019-12-15">
-            <description>
-                <p translatable="no">Simple BibTeX wizard, more bibliography features in LaTeX editor, ...</p>
+            <description translatable="no">
+                <p>Simple BibTeX wizard, more bibliography features in LaTeX editor, ...</p>
             </description>
         </release>
         <release version="0.1.1" date="2019-12-1">
-            <description>
-                <p translatable="no">BibTeX support in the build system, edit BibTeX files, ...</p>
+            <description translatable="no">
+                <p>BibTeX support in the build system, edit BibTeX files, ...</p>
             </description>
         </release>
         <release version="0.1.0" date="2019-11-27">
-            <description>
-                <p translatable="no">Editor settings in preferences dialog, ...</p>
+            <description translatable="no">
+                <p>Editor settings in preferences dialog, ...</p>
             </description>
         </release>
         <release version="0.0.7" date="2019-11-24">
-            <description>
-                <p translatable="no">Build multiple times to resolve undefined references, show warnings in build log, ...</p>
+            <description translatable="no">
+                <p>Build multiple times to resolve undefined references, show warnings in build log, ...</p>
             </description>
         </release>
         <release version="0.0.6" date="2019-11-21">
-            <description>
-                <p translatable="no">Indent multi-line inserts, ...</p>
+            <description translatable="no">
+                <p>Indent multi-line inserts, ...</p>
             </description>
         </release>
         <release version="0.0.5" date="2019-11-14">
-            <description>
-                <p translatable="no">Multiple documents in build log, build in temporary folder, ...</p>
+            <description translatable="no">
+                <p>Multiple documents in build log, build in temporary folder, ...</p>
             </description>
         </release>
         <release version="0.0.4" date="2019-11-11">
-            <description>
-                <p translatable="no">Root document function, ...</p>
+            <description translatable="no">
+                <p>Root document function, ...</p>
             </description>
         </release>
         <release version="0.0.3" date="2019-11-6">
-            <description>
-                <p translatable="no">New app layout, animated wizard button, big code refactor, ...</p>
+            <description translatable="no">
+                <p>New app layout, animated wizard button, big code refactor, ...</p>
             </description>
         </release>
         <release version="0.0.2" date="2019-10-22">
-            <description>
-                <p translatable="no">Set margins in wizard, improved icon, ...</p>
+            <description translatable="no">
+                <p>Set margins in wizard, improved icon, ...</p>
             </description>
         </release>
         ​<release version="0.0.1" date="2019-10-13">
-            <description>
-                <p translatable="no">Initial release</p>
+            <description translatable="no">
+                <p>Initial release</p>
             </description>
         </release>
     </releases>
